--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "prebuild": "rm -rf dist docs",
+    "save-dns": "mv docs/CNAME .",
+    "prebuild": "npm run save-dns && rm -rf dist docs",
     "build": "vue-cli-service build",
-    "postbuild": "mv dist docs",
+    "postbuild": "mv dist docs && npm run restore-dns",
+    "restore-dns": "mv CNAME docs",
     "test:unit": "vue-cli-service test:unit",
     "test": "vue-cli-service test:unit -w",
     "lint": "vue-cli-service lint --fix"
